# mijocraft-bevy

./: .gitignore  Cargo.toml  README.md
src/: chunk.rs  chunk_manager.rs  main.rs  menu.rs  pause_menu.rs  player.rs  utils.rs  widgets.rs  world.rs
src/widgets/: button.rs  game_settings.rs  mod.rs  player_settings.rs
