[package]
name = "mijocraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy_ecs = "0.14.0"
bevy_dylib = "0.14.0"
bevy-inspector-egui = "0.24.0"
bevy_simple_text_input = "0.8.0"
bevy_xpbd_2d = "0.5.0"
bincode = "1.3.3"
enum-iterator = "2.1.0"
filenamify = "0.1.0"
noise = "0.9.0"
opener = "0.7.1"
serde = "1.0.203"
serde-big-array = "0.5.1"
sickle_ui = { rev = "a0f42b2", git = "https://github.com/dead-money/sickle_ui" }
toml = "0.8.14"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
